# poker

./: pyproject.toml  simulation.py
app/: ai.py  card.py  data_collector.py  deck.py  game.py  gui.py  hand_evaluator.py  logger.py  player.py
tests/: test_deck.py  test_game.py
