[tool.poetry]
name = "poker"
version = "0.1.0"
description = "Poker game implemented in python"
authors = ["DuneRaccoon <benjamincsherro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
numpy = "^2.1.2"
loguru = "^0.7.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
